# eb-seg-sandbox

./: .cylcignore  .gitignore  README.md  Segmentation_EB.ipynb  config.toml  configjob.toml  flow.cylc  pyproject.toml  sample-workflow.ipynb
.devcontainer/: Dockerfile  devcontainer.json  ebseg.code-workspace
.github/workflows/: linter.yml  runtests.yml  tests.yml
paper-domain/: README.md  flow.cylc  locations.csv
sampled-examples/: README.md  all-cases.csv  flow.cylc  rose-suite.conf
sampled-examples/meta/: rose-meta.conf
sampled-examples/util/: get_fullnames.py
src/ebfloeseg/: __main__.py  app.py  io_.py  load.py  masking.py  peakdet.py  preprocess.py  process.py  run.py  savefigs.py  utils.py
tests/: test_app.py  test_get_bbox.py  test_io_.py  test_load.py  test_mask_image.py  test_masking.py  test_peakdet.py  test_preprocess.py  test_process.py  test_savefigs.py  test_utils.py
tests/load/: cloud.tiff  empty.tiff  landmask.tiff  truecolor.tiff
