[project]
name = "ebfloeseg" # TODO: choose better name?
dynamic = ["version"]
description = "Icefloe segmentation by Buckley"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "earth observation",
  "modis",
  "icefloe",
  "segmentation",
]
authors = [
  { name = "Ellen Buckley", email = "ellen_buckley@brown.edu" },
]
maintainers = []

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [ # TODO: update these
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "rasterio>=1.3.0, <2.0.0",
  "pandas >=2.2.0, <3.0.0",
  "matplotlib >=3.8, <4.0.0",
  "numpy >=1.26, <2.0.0",
  "scikit-image >=0.23.0, <1.0.0",
  "scipy >=1.13, <2.0.0",
  "opencv-python >=4.9, <5.0.0",
  "typer >=0.12.3, <1.0.0",
]

[project.optional-dependencies] # Optional
dev = [
  "check-manifest",
  "black",
  "ipython",
  "ptpython",
  "ipykernel",
  "nb-clean",
  "imagecodecs==2024.6.1", # for viewing tif files with matplotlib
  "ebfloeseg[test]",
]
test = [
  "coverage",
  "pytest >=7.4.4, <8.0.0",
  "pytest-xdist >=3.6.0, <4.0.0",
  "pytest-cov >=5.0.0, <6.0.0",
]


[project.urls]
"Homepage" = "https://github.com/WilhelmusLab/ebseg"
"Bug Reports" = "https://github.com/WilhelmusLab/ebseg/issues"
"Source" = "https://github.com/WilhelmusLab/ebseg"

[project.scripts]
fsdproc = "ebfloeseg.app:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ebfloeseg tests}"


[tool.pytest.ini_options]
markers = [
  "smoke: mark a test as a smoke test.",
  "slow: mark tests that run slowly.",
]

[tool.coverage.run]
source_pkgs = ["ebfloeseg", "tests"]
branch = true
parallel = true
omit = [
  "src/ebfloeseg/process.py", # tested in test_app.py
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
